<resources>
    <string name="app_name">ConstraintLayoutDemo</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome!</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="tnc">By continuing you agree to Redaa\'s \n Terms &amp; Conditions and Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="spinner">Spinner</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="progressbar">ProgressBar</string>
    <string name="seek_here">Seek Here</string>
    <string name="select_gender">Select Gender</string>
    <string name="please_uncheck_me">Please uncheck me</string>
    <string name="checkbox">Checkbox</string>
    <string name="description">Description</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam</string>
    <string name="additional_info">Additional Info</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_compare">Add to compare</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="please_login_to_continue_using_our_app">Please login to continue using our app.</string>
    <string name="tnc_new"><![CDATA[By continuing you agree to \n Terms & Conditions and Privacy Policy]]></string>
    <string name="new_user">New User?</string>
    <string name="let_s_create_your_profile">Let\'s create your profile</string>
    <string name="forgot">Forgot?</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="arq_real_estate">Arq Real Estate</string>
    <string name="about_us">About Us</string>
    <string name="contact_info">Contact Info</string>
    <string name="add">Add</string>
</resources>