<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:scaleType="fitXY"
        android:src="@drawable/back_arrow"
        app:layout_constraintEnd_toStartOf="@+id/imgCam"
        app:layout_constraintStart_toStartOf="@+id/imgCam"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgCam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:scaleType="fitXY"
        android:src="@drawable/camera"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/inputFName"
        app:layout_constraintTop_toBottomOf="@+id/imgCam" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputFName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:nextFocusForward="@id/inputLName"
        android:textSize="14sp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateAcc" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputLName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:nextFocusForward="@id/inputEmail"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/inputFName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@id/inputMob"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/inputLName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputMob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:nextFocusForward="@id/inputPwd"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputCPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:nextFocusForward="@id/inputConPwd"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/inputMob" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputConPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/eye"
        android:drawableRight="@drawable/eye"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/inputCPwd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/filled_btn"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_marginVertical="28dp"
        app:layout_constraintTop_toBottomOf="@id/inputConPwd"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="103dp"
        android:gravity="center_horizontal"
        android:text="@string/tnc"
        android:textAlignment="center"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/btnReg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="18dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
