<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WidgetsDemo">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        style="@style/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_bar"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingbar"
        style="@style/RatingBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:numStars="5"
        android:rating="2.6"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text2"
        style="@style/sheaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/ratingbar" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text3"
        style="@style/commonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/please_uncheck_me"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text4"
        style="@style/commonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_gender"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/text4"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toEndOf="@+id/text4"
        app:layout_constraintTop_toTopOf="@+id/text4">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text5"
        style="@style/commonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seek_here"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text5"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/seekvalue"
        app:layout_constraintStart_toEndOf="@+id/text5"
        app:layout_constraintTop_toTopOf="@+id/text5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/seekvalue"
        style="@style/commonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text6"
        style="@style/commonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progressbar"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/text5" />

    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:indeterminate="false"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintBottom_toBottomOf="@+id/text6"
        app:layout_constraintEnd_toEndOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/text6"
        app:layout_constraintTop_toTopOf="@+id/text6"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="18dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="18dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text7"
        style="@style/commonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Switch"
        android:typeface="sans"

        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/text6" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/text7"
        app:layout_constraintStart_toEndOf="@+id/text7"
        app:layout_constraintTop_toTopOf="@+id/text7" />

</androidx.constraintlayout.widget.ConstraintLayout>